--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>This is a heading</h1>
     <p>first paragraph</p>
-    <h1>first paragraph</h1>
+    <p>This is a paragraph</p>
     <p>This is a another paragraph</p>
 </body>
 </html>
