added paragraph tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
     <p>first paragraph</p>
+    <h1>first paragraph</h1>
+    <p>This is a another paragraph</p>
 </body>
 </html>
 
