add new paragraph tag with some description

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>This is a heading</h1>
     <p>first paragraph</p>
     <p>This is a paragraph</p>
     <p>This is a another paragraph</p>
-</body>
+    <p>
+      Resolved the conflict between changes of main or default branch and branch
+      that I working on. Using "git pull -r", "git add .", "git rebase
+      --continue", "git push -f".
+    </p>
+  </body>
 </html>
-
